iptablesAP.rules
# Generated by iptables-save v1.6.0 on Mon Jan 23 14:59:22 2017
*nat
:PREROUTING ACCEPT [1:60]
:INPUT ACCEPT [1:60]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -s 192.168.1.40/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.39/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.38/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.37/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.36/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.35/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.34/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.33/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.32/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.31/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.30/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.29/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.28/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.27/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.26/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.25/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.24/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.23/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.22/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.21/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.20/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.19/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.18/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.17/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.16/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.15/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.14/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.13/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.12/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.11/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.10/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.9/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.8/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.7/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.6/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.5/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.4/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.3/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
-A PREROUTING -s 192.168.1.2/32 -p tcp -j DNAT --to-destination 192.168.1.1:80
COMMIT
# Completed on Mon Jan 23 14:59:22 2017
